Use channel from Config.

--- a/mock-task.yaml
+++ b/mock-task.yaml
@@ -26,4 +26,4 @@
               config: 
                 debug: true
                 address: "nats://nats-server:4222"
-                channel: "snap"
+                channel: "Snap"
