Added Nats encoding support

--- a/mock-task.yaml
+++ b/mock-task.yaml
@@ -27,3 +27,4 @@
                 debug: true
                 address: "nats://nats-server:4222"
                 channel: "Snap"
+                encoding: "json"
